--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -14,19 +14,24 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/x-charts": "^7.3.1",
     "@mui/x-data-grid": "^7.1.1",
     "@nivo/bar": "^0.85.1",
     "@nivo/core": "^0.85.1",
     "@nivo/geo": "^0.85.1",
     "@nivo/pie": "^0.85.1",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "emailjs": "^4.0.3",
     "install": "^0.13.0",
     "npm": "^10.5.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sweetalert2": "^11.10.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
