--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@formspree/react": "^2.5.1",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-charts": "^7.3.1",
@@ -24,6 +25,7 @@
     "axios": "^1.6.8",
     "emailjs": "^4.0.3",
     "install": "^0.13.0",
+    "lottie-react": "^2.4.0",
     "npm": "^10.5.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
