--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -23,9 +23,11 @@
     "@nivo/pie": "^0.85.1",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "darkmode-js": "^1.5.7",
     "emailjs": "^4.0.3",
     "install": "^0.13.0",
     "lottie-react": "^2.4.0",
+    "moment": "^2.30.1",
     "npm": "^10.5.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
